<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.target.targetcasestudy.ui.dealdetails.DealsDetailsViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.target.targetcasestudy.utils.CustomScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_45dp"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="8">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    app:layout_constraintBottom_toTopOf="@+id/constraint_bottom_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/dimen_12dp"
                        app:imageUrl="@{viewModel.dealsDetails.image_url}" />
                </RelativeLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_bottom_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/deals_discount_price"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_12dp"
                        android:layout_marginRight="@dimen/dimen_12dp"
                        android:fontFamily="@font/roboto_bold"
                        android:singleLine="true"
                        android:text='@{viewModel.dealsDetails.sale_price!=null?viewModel.dealsDetails.sale_price.display_string:viewModel.dealsDetails.regular_price.display_string}'
                        android:textColor="@color/color_CC0000"
                        android:textSize="@dimen/dimen_28sp"
                        app:layout_constraintEnd_toStartOf="@+id/deals_reg_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="$184.06" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/deals_reg_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_8dp"
                        android:layout_marginRight="@dimen/dimen_8dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/reg_text"
                        android:textColor="@color/color_7d7d7d"
                        android:textSize="@dimen/dimen_25sp"
                        android:visibility='@{viewModel.dealsDetails.sale_price!=null?View.VISIBLE:View.GONE}'
                        app:layout_constraintEnd_toStartOf="@+id/deals_price"
                        app:layout_constraintTop_toTopOf="@+id/deals_discount_price"
                        tools:text="Reg: " />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/deals_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_12dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@{viewModel.dealsDetails.regular_price.display_string}"
                        android:textColor="@color/color_7d7d7d"
                        android:textSize="@dimen/dimen_25sp"
                        android:visibility='@{viewModel.dealsDetails.sale_price!=null?View.VISIBLE:View.GONE}'
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/deals_discount_price"
                        tools:text="$184.06" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/deals_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_12dp"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:layout_marginRight="@dimen/dimen_12dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_light"
                        android:maxLines="2"
                        android:text="@{viewModel.dealsDetails.title}"
                        android:textColor="@color/color_7d7d7d"
                        android:textSize="@dimen/dimen_25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/deals_discount_price"
                        tools:text="non mollit veniam ex" />

                    <WebView
                        android:id="@+id/deals_description"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="@dimen/dimen_0dp"
                        android:layout_marginLeft="@dimen/dimen_6dp"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:layout_marginRight="@dimen/dimen_6dp"
                        android:layout_marginBottom="@dimen/dimen_12dp"
                        android:scrollbars="none"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/deals_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </com.target.targetcasestudy.utils.CustomScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:text="@string/internet_error_message"
            android:textSize="@dimen/dimen_25sp"
            app:dealsList="@{viewModel.dealsDetails}"
            app:vis="@{safeUnbox(viewModel.eventNetworkError)}"
            tools:visibility="gone"/>


        <ProgressBar
            style="@style/progressBarStyle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_in"
            app:dealsList="@{viewModel.dealsDetails}"
            app:isNetworkError="@{safeUnbox(viewModel.eventNetworkError)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_bottom_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deals_add_to_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_E0E0E0"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/add_to_list_text"
                android:textAllCaps="false"
                android:textSize="@dimen/dimen_18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deals_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_CC0000"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/add_to_cart_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>